# flexic

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: default.yml
benches/: CMakeLists.txt  bench_seek_key.cpp  bench_walk.cpp  flexic_bench.cpp  flexic_bench.hpp  large_doc1.json  large_doc2.flexbuf  large_doc2.json
cmake/: FindFSan.cmake  FindSanitizers.cmake  arm-none-eabi.cmake  sanitize-helpers.cmake
cmake/modules/: CopyTarget.cmake  LLVMCov.cmake
docs/: CMakeLists.txt
fuzzer/: CMakeLists.txt  flexic_fuzz_parser.cpp  flexic_fuzz_writer.cpp  fuzzer.cpp
include/: flexic.h
src/: flexic.c
tests/: CMakeLists.txt  basic_types.flexbuf  cursor_bool.cpp  cursor_error.cpp  cursor_float.cpp  cursor_foreach.cpp  cursor_int.cpp  cursor_map.cpp  cursor_sint.cpp  cursor_string.cpp  cursor_to_json.cpp  cursor_typed_vector.cpp  cursor_uint.cpp  gold.cpp  json.cpp  large_doc1.flexbuf  large_strings.flexbuf  nested_types.flexbuf  parser.cpp  parser_error.cpp  simple.cpp  test.cpp  tests.cpp  tests.hpp  typed_vectors.flexbuf  write_error.cpp  write_float.cpp  write_int.cpp  write_map.cpp  write_other.cpp  write_vector.cpp
